--- a/index.html
+++ b/index.html
@@ -11,21 +11,25 @@
 
 <body>
 
-    <h1> Welcome to Week 1, everybody</h1>
+
+
+
+
+
+
+
+
+
+
+
+
+    <script>
+
+        document.write("Welcome to Javascript everybody")
+
+    </script>
+
+
 </body>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 </html>
