added more info

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
 
     <script>
 
-        document.write("Welcome to Javascript everybody")
+        document.write("Welcome to Javascript everybody"+ '<br>');
+        document.write("my name is <strong>John Mwaura</strong>"+'<br>');
+        document.write(22/3 + '<br>');
+        document.write(19*127+ '<br>');
 
     </script>
 
