--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <script>
 
         document.write("Welcome to Javascript everybody"+ '<br>');
-        document.write("my name is <strong>John Mwaura</strong>"+'<br>');
-        document.write(22/3 + '<br>');
-        document.write(19*127+ '<br>');
+        document.write("<h1> John Mwaura</h1>");
+        document.write("<div>Age: "+ (22/3) + "</div>");
+        document.write("<div>Day: " + (19*127) + "</div");
 
     </script>
 
