--- a/index.html
+++ b/index.html
@@ -24,11 +24,16 @@
 
 
     <script>
+        var age= prompt("Users age?")
+        var day=20;
+        var name = prompt("Users name?")
+
 
         document.write("Welcome to Javascript everybody"+ '<br>');
-        document.write("<h1> John Mwaura</h1>");
-        document.write("<div>Age: "+ (22/3) + "</div>");
-        document.write("<div>Day: " + (19*127) + "</div");
+        document.write("<h1>" + name +"</h1>");
+        document.write("<div>Age: "+ (age/3) + "</div>");
+        document.write("<div>Day: " + (day*127) + "</div");
+        document.write("Age* Day: " + (age*day));
 
     </script>
 
