if and else intro

--- a/index.html
+++ b/index.html
@@ -24,17 +24,26 @@
 
 
     <script>
-        var age= prompt("Users age?")
-        var day=20;
-        var name = prompt("Users name?")
+        var age= prompt("Users age?");
+        /*var day=prompt("Users day of birth?");
+*/        var name = prompt("Users name?");
 
-
+/*
         document.write("Welcome to Javascript everybody"+ '<br>');
         document.write("<h1>" + name +"</h1>");
         document.write("<div>Age: "+ (age/3) + "</div>");
         document.write("<div>Day: " + (day*127) + "</div");
         document.write("Age* Day: " + (age*day));
+            document.write((45*656)||(453-5242));*/
+if(age > 55){
 
+
+            document.write("User is old");
+}
+else{
+            document.write("User is young");
+            
+}
     </script>
 
 
