use  the variables with if else

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 if(age > 55){
 
 
-            document.write("User is old");
+            document.write( name+ "is old");
 }
 else{
-            document.write("User is young");
+            document.write(name+  "is young");
             
 }
     </script>
