using else if together with if & else

--- a/index.html
+++ b/index.html
@@ -34,14 +34,19 @@
         document.write("<div>Age: "+ (age/3) + "</div>");
         document.write("<div>Day: " + (day*127) + "</div");
         document.write("Age* Day: " + (age*day));
-            document.write((45*656)||(453-5242));*/
+            document.write((4  5*656)||(453-5242));*/
 if(age > 55){
 
 
-            document.write( name+ "is old");
+            document.write( name+ " is old");
+}
+
+else if(age>25 && age < 45){
+
+    document.write (name + " is just right")
 }
 else{
-            document.write(name+  "is young");
+            document.write(name+  " is young");
             
 }
     </script>
