--- a/index.html
+++ b/index.html
@@ -24,31 +24,31 @@
 
 
     <script>
-        var age= prompt("Users age?");
+        var age = prompt("Users age?");
         /*var day=prompt("Users day of birth?");
 */        var name = prompt("Users name?");
 
-/*
-        document.write("Welcome to Javascript everybody"+ '<br>');
-        document.write("<h1>" + name +"</h1>");
-        document.write("<div>Age: "+ (age/3) + "</div>");
-        document.write("<div>Day: " + (day*127) + "</div");
-        document.write("Age* Day: " + (age*day));
-            document.write((4  5*656)||(453-5242));*/
-if(age > 55){
+        /*
+                document.write("Welcome to Javascript everybody"+ '<br>');
+                document.write("<h1>" + name +"</h1>");
+                document.write("<div>Age: "+ (age/3) + "</div>");
+                document.write("<div>Day: " + (day*127) + "</div");
+                document.write("Age* Day: " + (age*day));
+                    document.write((4  5*656)||(453-5242));*/
+        if (age > 55) {
 
 
-            document.write( name+ " is old");
-}
+            document.write(name + " is old");
+        }
 
-else if(age>25 && age < 45){
+        else if (age < 25 ) {
 
-    document.write (name + " is just right")
-}
-else{
-            document.write(name+  " is young");
-            
-}
+            document.write(name + " is young ")
+        }
+        else {
+            document.write(name + " is just right ");
+
+        }
     </script>
 
 
