--- a/index.html
+++ b/index.html
@@ -50,10 +50,22 @@
 
         //         }
         // var number =99;
-        var number = 99;
-        while (number > 0) {
-            document.write("<div>" + number + " bottles of beer on the wall." + number + " bottles of beer on the wall." + "<br>" + " Take one down and pass it around! " + "</div");
-            number--;
+        // var number = 99;
+        // while (number > 0) {
+        //     document.write("<div>" + number + " bottles of beer on the wall." + number + " bottles of beer on the wall." + "<br>" + " Take one down and pass it around! " + "</div");
+        //     number--;
+        // }
+        // var number = prompt("Count from what?");
+        // // while(number<100){
+        //     for(var i= number; i< 90 && i> 45; i++){
+        //     document.write("Number " + i + "<br>");
+        //     number++;
+        // }
+var min= prompt(" What is the minimum value?");
+var max= prompt(" What is the maximum value?");
+for( var i= max;i > min; i-- ){
+    document.write("Number " + i + "<br>");
+            
         }
 
     </script>
