added some comments

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ for( var i= max;i > min; i-- ){
     document.write("Number " + i + "<br>");
             
         }
-
+//this is for counting a number backwards, as seen, the user is asked for input. that is how we utilise for loop ; we set i equals to the max/min number to show where we're counting from
     </script>
 
 
