nested loops..for rows and columns

--- a/index.html
+++ b/index.html
@@ -61,13 +61,42 @@
         //     document.write("Number " + i + "<br>");
         //     number++;
         // }
-var min= prompt(" What is the minimum value?");
-var max= prompt(" What is the maximum value?");
-for( var i= max;i > min; i-- ){
-    document.write("Number " + i + "<br>");
+// var min= prompt(" What is the minimum value?");
+// var max= prompt(" What is the maximum value?");
+// for( var i= max;i > min; i-- ){
+//     document.write("Number " + i + "<br>");
             
+     
+        //this is for counting a number backwards, as seen, the user is asked for input. that is how we utilise for loop ; we set i equals to the max/min number to show where we're counting from
+
+
+        var cols = prompt(" How many columns to print?");
+
+        var rows = prompt(" How many rows to print?");
+        for (var x = 1; x <= rows; x++) {
+            for (var i = 1; i <= cols; i++) {
+                document.write("X");
+            }
+            document.write("<br>");
         }
-//this is for counting a number backwards, as seen, the user is asked for input. that is how we utilise for loop ; we set i equals to the max/min number to show where we're counting from
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </script>
 
 
