--- a/index.html
+++ b/index.html
@@ -61,40 +61,65 @@
         //     document.write("Number " + i + "<br>");
         //     number++;
         // }
-// var min= prompt(" What is the minimum value?");
-// var max= prompt(" What is the maximum value?");
-// for( var i= max;i > min; i-- ){
-//     document.write("Number " + i + "<br>");
-            
-     
+        // var min= prompt(" What is the minimum value?");
+        // var max= prompt(" What is the maximum value?");
+        // for( var i= max;i > min; i-- ){
+        //     document.write("Number " + i + "<br>");
+
+
         //this is for counting a number backwards, as seen, the user is asked for input. that is how we utilise for loop ; we set i equals to the max/min number to show where we're counting from
 
 
-        var cols = prompt(" How many columns to print?");
+        // var cols = prompt(" How many columns to print?");
 
-        var rows = prompt(" How many rows to print?");
-        for (var x = 1; x <= rows; x++) {
-            for (var i = 1; i <= cols; i++) {
-                document.write("X");
+        // var rows = prompt(" How many rows to print?");
+        // function makeRow() {
+        //     for (var x = 1; x <= rows; x++) {
+        //         document.write("X");
+        //     }
+        // }
+  
+
+        // function findNumberOfCells(){
+        //         return cols * rows
+        // }
+
+        //     for (var i = 1; i <= cols; i++) {
+
+        //         makeRow();
+        //         document.write("<br>");
+        //         }
+
+        //     // function bobsays(){
+        //     //     alert(" Yeah, i said something") //functions are not executed till they are called.
+
+        //     // }
+
+        //     //         bobsays();
+
+
+
+
+        //     //         for(var i=1;i<24;1++){
+        //     //             bobsays()
+        //     //         }
+        //         var totalCells= findNumberOfCells();
+        //             document.write(" With " + rows + " Rows and "+ cols + " columns");
+        //             document.write(" there are" + totalCells);
+        //             document.write(" total cells.")
+
+
+            function bobSays(whatHeSaid, times){
+                for(var i=1;i<= times;i++){
+                document.write("Bob says, " + whatHeSaid);
+                document.write("<br>");
+
+                                                    //isolating your code this wayis good code hygiene
             }
-            document.write("<br>");
-        }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+                                                }
+            bobSays("Use tabs not spaces", 10);
+            bobSays("Linux Rocks",8);
+            bobSays(25);
 
 
     </script>
