--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
         //  document.write(upperWords);
 
 
-         var age=prompt(" How old is the dog in human years?");
+         var humanYears=prompt(" How old is the dog in human years?");
 
-         function ageConvert(x){
+         function dogAge(x){
              
-            x/=7;
-            document.write(" Your dog is " + x + " years old in dog years")
+            // x/=7;
+            document.write(" Your dog is " + (x*7) + " years old in dog years")
          }
 
-         ageConvert(age);
+         dogAge(humanYears);
     </script>
 
 
