--- a/index.html
+++ b/index.html
@@ -29,15 +29,23 @@
         //  document.write(upperWords);
 
 
-         var humanYears=prompt(" How old is the dog in human years?");
+        // var humanYears = prompt(" How old is the dog in human years?");
 
-         function dogAge(x){
-             
-            // x/=7;
-            document.write(" Your dog is " + (x*7) + " years old in dog years")
-         }
+        // function dogAge(x) {
 
-         dogAge(humanYears);
+        //     // x/=7;
+        //     document.write(" Your dog is " + (x * 7) + " years old in dog years")
+        // }
+
+        // dogAge(humanYears);
+        var word= prompt(" Say a word");
+        var times = prompt( " how many times do you want it repeated");
+        function repeatWord(x,y){
+            for(i=1; i <= y; i++) {
+            document.write(x + "<br>");
+            }
+        }
+        repeatWord(word,times);
     </script>
 
 
