--- a/index.html
+++ b/index.html
@@ -24,31 +24,18 @@
 
 
     <script>
-        // var words= " It is a far better thing i do";
-        // var upperWords = words.toUpperCase();
-        //  document.write(upperWords);
-
-
-        // var humanYears = prompt(" How old is the dog in human years?");
-
-        // function dogAge(x) {
-
-        //     // x/=7;
-        //     document.write(" Your dog is " + (x * 7) + " years old in dog years")
-        // }
-
-        // dogAge(humanYears);
-        var word= prompt(" Say a word");
-        var times = prompt( " how many times do you want it repeated");
-        function repeatWord(x,y){
-            for(i=1; i <= y; i++) {
-            document.write(x + "<br>");
-            }
-        }
-        repeatWord(word,times);
+      
+        function printNum( myArray){
+          for( var i= 0; i< myArray.length; i++){ 
+            document.write(" Print " + myArray[i]);
+            document.write(" <br>");  
+          }                                  
+        }   
+        var nums = [ 23, 24, 55, 45, 72];
+        printNum(nums);
     </script>
 
 
 </body>
 
-</html>
+</html> 
