--- a/index.html
+++ b/index.html
@@ -46,6 +46,32 @@
         nums.pop();
         nums.pop();
         nums.pop();
+        //lyrics of 99 bottles of beer
+            //         var age = prompt("Users age?");
+        //         /*var day=prompt("Users day of birth?");
+        // */        var name = prompt("Users name?");
+        //         /*
+        //                 document.write("Welcome to Javascript everybody"+ '<br>');
+        //                 document.write("<h1>" + name +"</h1>");
+        //                 document.write("<div>Age: "+ (age/3) + "</div>");
+        //                 document.write("<div>Day: " + (day*127) + "</div");
+        //                 document.write("Age* Day: " + (age*day));
+        //                     document.write((4  5*656)||(453-5242));*/
+        //         if (age > 55) {
+        //             document.write(name + " is old");
+        //         }
+        //         else if (age < 25 ) {
+        //             document.write(name + " is young ")
+        //         }
+        //         else {
+        //             document.write(name + " is just right ");
+        //         }
+        // var number =99;
+        var number = 99;
+        while (number > 0) {
+            document.write("<div>" + number + " bottles of beer on the wall." + number + " bottles of beer on the wall." + "<br>" + " Take one down and pass it around! " + "</div");
+            number--;
+        }
 
 
 
